fix(project): Multi-jvm test fixes for JDK21